# bigram-namegen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: villain_names.txt  villains.txt
notebooks/: exploration.ipynb
src/bigram_namegen/: __init__.py  cli.py  counting_model.py  data.py  neural_model.py  plotting.py  vocab.py
tests/: test_counting_model.py  test_neural_model.py  test_vocab_and_data.py
