[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigram-namegen"
version = "0.1.0"
description = "A from-scratch character-level bigram name generator (counting model + single-layer neural model)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]
keywords = ["nlp", "language-model", "pytorch", "bigram", "name-generator", "makemore"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = ["pytest>=7.0"]

[project.scripts]
bigram-namegen = "bigram_namegen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
